# obs-studio

./: Untitled Diagram.xml
cmake/Modules/: FindFreetype.cmake
plugins/text-freetype2/: CMakeLists.txt  find-font-cocoa.m  find-font-windows.c  find-font.h  text-freetype2.c  text-functionality.c
